grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $._declaration,
        $.using_directive,
        $.pragma,
        ';', // tolerate stray top-level semicolons
      ),

    // -----------------------------------------------------------------------
    // 2. Comments and pragmas
    //    Standard ST: line `//`, block `(* … *)`. Block comments do NOT nest
    //    in the standard. `{ … }` is reserved for pragmas (compiler/tool
    //    directives) and is parsed as an opaque node.
    // -----------------------------------------------------------------------
    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    // Compile-time path used for namespace-qualified type, namespace, and
    // using references. Distinct from `member_access_expression`, which is a
    // runtime access; the two have identical surface syntax but appear in
    // disjoint grammatical positions.
    integer_literal: ($) =>
      token(
        choice(
          // base-prefixed: 2#1010, 8#777, 16#FFFF, with optional `_` separators
          /[+-]?(2|8|16)#[0-9A-Fa-f]+(_[0-9A-Fa-f]+)*/,
          // plain decimal with optional underscores
          /[+-]?[0-9]+(_[0-9]+)*/,
        ),
      ),

    // 4.3 Reals — must contain `.` or exponent to disambiguate from integer.
    _type_specifier: ($) =>
      choice(
        $.elementary_type,
        $.generic_type,
        $.string_type,
        $.array_type,
        $.pointer_type,
        $.reference_type,
        $.subrange_type,
        $.enumerated_type_inline,
        $.structure_type_inline,
        $._name, // user-defined type / qualified
      ),

    // 5.1 Elementary types — §6.4.1
    elementary_type: ($) =>
      choice(
        kw('BOOL'),
        kw('BYTE'),
        kw('WORD'),
        kw('DWORD'),
        kw('LWORD'),
        kw('SINT'),
        kw('USINT'),
        kw('INT'),
        kw('UINT'),
        kw('DINT'),
        kw('UDINT'),
        kw('LINT'),
        kw('ULINT'),
        kw('REAL'),
        kw('LREAL'),
        kw('TIME'),
        kw('LTIME'),
        kw('DATE'),
        kw('LDATE'),
        kw('TIME_OF_DAY'),
        kw('TOD'),
        kw('LTIME_OF_DAY'),
        kw('LTOD'),
        kw('DATE_AND_TIME'),
        kw('DT'),
        kw('LDATE_AND_TIME'),
        kw('LDT'),
        kw('CHAR'),
        kw('WCHAR'),
      ),

    // 5.2 Generic types — §6.4.4 (used in function/method signatures).
    array_type: ($) =>
      seq(
        kw('ARRAY'),
        '[',
        commaSep1(field('range', $.subrange)),
        ']',
        kw('OF'),
        field('element_type', $._type_specifier),
      ),

    subrange: ($) =>
      seq(
        field('lower', $._expression),
        '..',
        field('upper', $._expression),
      ),

    reference_type: ($) =>
      seq(kw('REF_TO'), field('target', $._type_specifier)),

    // 5.6 Subrange (named) type — §6.4.3.1
    //     `prec.left(1)` biases the parser toward consuming `(lower..upper)`
    //     after an elementary type when both alternatives could apply.
    _var_block: ($) =>
      choice(
        $.var_block,
        $.var_input,
        $.var_output,
        $.var_in_out,
        $.var_temp,
        $.var_global,
        $.var_external,
        $.var_access,
        $.var_config,
      ),

    var_block: ($) =>
      seq(
        kw('VAR'),
        optional($.var_qualifier_list),
        repeat($._var_decl_line),
        kw('END_VAR'),
      ),
    var_input: ($) =>
      seq(
        kw('VAR_INPUT'),
        optional($.var_qualifier_list),
        repeat($._var_decl_line),
        kw('END_VAR'),
      ),
    _var_decl_line: ($) =>
      choice($.variable_declaration, $.pragma),

    // §6.5.1 — name {, name} : type [AT %addr] [:= init] ;
    variable_declaration: ($) =>
      seq(
        field('names', commaSep1($.identifier)),
        optional(seq(kw('AT'), field('address', $.direct_address))),
        ':',
        field('type', $._type_specifier),
        optional(seq(':=', field('initial_value', $._initializer))),
        ';',
      ),

    _initializer: ($) =>
      choice(
        $._expression,
        $._array_initializer,
        $.structure_initializer,
      ),

    _expression: ($) =>
      choice(
        $._literal,
        $.parenthesized_expression,
        $.call_expression,
        $.index_expression,
        $.member_access_expression,
        $.dereference_expression,
        $.address_of_expression,
        $.unary_expression,
        $.binary_expression,
        $.this_expression,
        $.super_expression,
        $.identifier, // chains form via member_access_expression
      ),

    call_expression: ($) =>
      prec(
        PREC.POSTFIX,
        seq(
          field('function', $._expression),
          field('arguments', $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq('(', commaSep(choice($.named_argument, $._expression)), ')'),

    named_argument: ($) =>
      seq(
        field('name', $.identifier),
        choice(':=', '=>'),
        field('value', $._expression),
      ),

    index_expression: ($) =>
      prec(
        PREC.POSTFIX,
        seq(
          field('object', $._expression),
          '[',
          field('index', commaSep1($._expression)),
          ']',
        ),
      ),

    member_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field('object', $._expression),
          '.',
          field('member', $.identifier),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.OR, choice(kw('OR'))],
        [PREC.XOR, choice(kw('XOR'))],
        [PREC.AND, choice(kw('AND'), '&')],
        [PREC.EQUALITY, choice('=', '<>')],
        [PREC.COMPARE, choice('<', '>', '<=', '>=')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MULTIPLY, choice('*', '/', kw('MOD'))],
      ];
      const left = table.map(([precedence, operator]) =>
        prec.left(
          precedence,
          seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ),
        ),
      );
      // Power is right-associative — IEC 61131-3 §6.6.5
      const power = prec.right(
        PREC.POWER,
        seq(
          field('left', $._expression),
          field('operator', '**'),
          field('right', $._expression),
        ),
      );
      return choice(...left, power);
    },

    // -----------------------------------------------------------------------
    // 8. Statements — IEC 61131-3 §6.6.4
    // -----------------------------------------------------------------------
    _statement_list: ($) => repeat1($._statement),

    // The left-hand side of an assignment is syntactically any expression;
    // semantic assignability (rejecting `1 + 2 := x`) is enforced downstream.
    assignment_statement: ($) =>
      seq(
        field('left', $._expression),
        ':=',
        field('right', $._expression),
        ';',
      ),

    reference_assignment_statement: ($) =>
      seq(
        field('left', $._expression),
        $.ref_assign,
        field('right', $._expression),
        ';',
      ),

    ref_assign: ($) => token(/[Rr][Ee][Ff]=/),

    // An invocation statement is just a call expression terminated by `;`.
    invocation_statement: ($) =>
      prec(PREC.CALL_STATEMENT, seq($.call_expression, ';')),

    empty_statement: ($) => ';',

    // 8.1 IF
    if_statement: ($) =>
      seq(
        kw('IF'),
        field('condition', $._expression),
        kw('THEN'),
        field('consequence', optional($._statement_list)),
        repeat($.elsif_clause),
        optional($.else_clause),
        kw('END_IF'),
      ),

    elsif_clause: ($) =>
      seq(
        kw('ELSIF'),
        field('condition', $._expression),
        kw('THEN'),
        field('body', optional($._statement_list)),
      ),

    else_clause: ($) =>
      seq(kw('ELSE'), field('body', optional($._statement_list))),

    // 8.2 CASE
    case_statement: ($) =>
      seq(
        kw('CASE'),
        field('subject', $._expression),
        kw('OF'),
        repeat1($.case_clause),
        optional($.else_clause),
        kw('END_CASE'),
      ),

    case_clause: ($) =>
      seq(
        commaSep1($.case_value),
        ':',
        field('body', optional($._statement_list)),
      ),

    case_value: ($) =>
      choice(
        $._expression,
        $.subrange,
      ),

    // 8.3 FOR
    for_statement: ($) =>
      seq(
        kw('FOR'),
        field('control', $.identifier),
        ':=',
        field('start', $._expression),
        kw('TO'),
        field('end', $._expression),
        optional(seq(kw('BY'), field('step', $._expression))),
        kw('DO'),
        field('body', optional($._statement_list)),
        kw('END_FOR'),
      ),

    // 8.4 WHILE
    while_statement: ($) =>
      seq(
        kw('WHILE'),
        field('condition', $._expression),
        kw('DO'),
        field('body', optional($._statement_list)),
        kw('END_WHILE'),
      ),

    // 8.5 REPEAT
    repeat_statement: ($) =>
      seq(
        kw('REPEAT'),
        field('body', optional($._statement_list)),
        kw('UNTIL'),
        field('condition', $._expression),
        kw('END_REPEAT'),
      ),

    exit_statement: ($) => seq(kw('EXIT'), ';'),
    continue_statement: ($) => seq(kw('CONTINUE'), ';'),
    return_statement: ($) =>
      seq(
        kw('RETURN'),
        optional(field('value', $._expression)),
        ';',
      ),

    // -----------------------------------------------------------------------
    // 9. Program Organization Units (POUs) — IEC 61131-3 §6.7
    // -----------------------------------------------------------------------
    program_declaration: ($) =>
      seq(
        kw('PROGRAM'),
        field('name', $.identifier),
        repeat($._var_block),
        field('body', optional($._statement_list)),
        kw('END_PROGRAM'),
      ),

    // §6.7.1 — FUNCTION (with return type)
    function_declaration: ($) =>
      seq(
        kw('FUNCTION'),
        field('name', $.identifier),
        ':',
        field('return_type', $._type_specifier),
        repeat($._var_block),
        field('body', optional($._statement_list)),
        kw('END_FUNCTION'),
      ),

    // §6.7.3 — FUNCTION_BLOCK with optional EXTENDS / IMPLEMENTS / methods.
